--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   </nav>
 
   <!-- ======= Intro Section ======= -->
-  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/updesh.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/glaCvr.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
