--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/DvIcon.png" rel="icon">
+  <link href="https://github.com/kingRovo/mysite.github.io/blob/main/assets/img/glaCvr.JPG" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
