--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="https://github.com/kingRovo/mysite.github.io/blob/main/assets/img/glaCvr.JPG" rel="icon">
+  <link href="assets/img/DvIcon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Vendor CSS Files -->
@@ -63,7 +63,7 @@
   </nav>
 
   <!-- ======= Intro Section ======= -->
-  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/glaCvr.jpg)">
+  <div id="home" class="intro route bg-image" style="background-image: url(assets/img/glaCvr.JPG)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
