--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Updesh</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Java Developer</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Software Engineer</span></p>
                         <p><span class="title-s">Email: </span> <span>updesh7457@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>7457037445</span></p>
                       </div>
@@ -691,7 +691,6 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>RovoDesign</strong>. All Rights Reserved</p>
             <div class="credits">
       
               Designed by <a href="https://github.com/kingRovo">Rovo</a>
