--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </div>
                     <p class="lead">
                      My name is Updesh, I live in Agra Uttar Pradesh. Currently, 
-                     I am pursuing MCA from Chandigarh University, Panjab and I did my garduation in BCA from GLA University.
+                     I am pursuing MCA from Chandigarh University, Panjab and I did my graduation in BCA from GLA University.
                      Mathura, Uttar Pradesh.
                     </p>
                     <p class="lead">
