--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">I am Updesh</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Java Developer ,Android Developer,Spring Boot,Back-end Developer,react js</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Java Developer ,Android Developer,Spring Boot,Back-end Developer</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -108,7 +108,7 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Spring Boot</span> <span class="pull-right">60%</span>
+                    <span>Spring Boot</span> <span class="pull-right">70%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -116,11 +116,8 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>Html/Css</span> <span class="pull-right">80%</span>
-                    <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                     <span>Android</span> <span class="pull-right">30%</span>
+            
+                     <span>Android</span> <span class="pull-right">40%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
